Edit mode scale of increased selection region bordering hidden geometry causes crash #44542

Closed
opened 2015-04-29 07:36:32 +02:00 by Konstantins Visnevskis · 9 comments

System Information
Win8.1x64 3xgtx580, Ubuntu14 intel gma

Blender Version
2.74

Short description of error
Edit mode scale of increased selection region bordering hidden geometry causes crash

Exact steps for others to reproduce the error

  • Ctrl+Plus to increase selected region
  • Scale resulting selection ->Crash
**System Information** Win8.1x64 3xgtx580, Ubuntu14 intel gma **Blender Version** 2.74 **Short description of error** Edit mode scale of increased selection region bordering hidden geometry causes crash **Exact steps for others to reproduce the error** - Ctrl+Plus to increase selected region - Scale resulting selection ->Crash

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @mont29

Added subscriber: @mont29

I’m sorry, but for me this is completely unclear report:

  • Please make a clear list of steps to reproduce the issue.
  • Please attach here a .blend file to help with reproducing it.
I’m sorry, but for me this is completely unclear report: * Please make a clear list of steps to reproduce the issue. * Please attach here a .blend file to help with reproducing it.

Sorry, it seems I deleted reference to file after uploading, here it is: err.blend

Sorry, it seems I deleted reference to file after uploading, here it is: [err.blend](https://archive.blender.org/developer/F167951/err.blend)
Bastien Montagne self-assigned this 2015-04-29 16:42:40 +02:00

Thanks, can confirm the issue.

Thanks, can confirm the issue.

This issue was referenced by 78956b6a83

This issue was referenced by 78956b6a83f2b5b3011fcfee7715b563c4c8b1bd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 78956b6a83.

Closed by commit 78956b6a83.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44542
No description provided.