Fix T44542: 'extend selection' editmode tool would select hidden elements.